issue fixed with z-index, button issue remians

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,15 +13,17 @@
   background-image: url('https://i.pinimg.com/736x/74/3f/6b/743f6b19c4cb5ca4cadcc300e1d1d08a.jpg');
   background-position: center;
   background-size:cover;
-  z-index: 0;
+
 
 }
+
 .hero{
   display: flex;
   flex-direction: column;
   height: 100vh;
   width: 100vw;
   padding:30px;
+  z-index: 0;
 
 }
 .heroText{
@@ -48,7 +50,7 @@
     display:flex;
     flex-direction: column;
     background-color:var(--deepBlue);
-    height: 600px;
+    height: 400px;
     
     width:95vw;
     justify-content: center;
@@ -56,7 +58,7 @@
     border-radius:10px;
     opacity: 0.90;
     position: relative;
-    z-index: 1;
+    z-index:1;
 
 }
 
@@ -96,12 +98,9 @@
   width: auto;
   height: 50px;
   border-color: #fff;
-  left:80%;
-  
-
+  z-index:2
 
 }
-
 
 .articleScrollBar p{
   width:200px;
